# modelforge

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yaml  CI_curate.yaml  CI_modelforge_ase.yaml  CI_modelforge_curate.yaml  CI_modelforge_openmm.yaml  black.yml
dataset_test/data_test/: PhAlkEthOH_dataset_v0_nc_1000_processed.json  SPICE114OpenFF_dataset_nc_1000_processed.json  SPICE114_dataset_nc_1000_processed.json  SPICE1_OpenFF_dataset_nc_1000_processed.json  SPICE2_dataset_nc_1000_processed.json  SPICE2_dataset_v0_nc_1000_processed.json  ani1x_dataset_v0_nc_1000_processed.json  ani2x_dataset_v0_nc_1000_processed.json  qm9_dataset_v0_nc_1000_processed.json  qm9_test.json
dataset_test/test_diff_scenario/: qm9_dataset_v0_nc_1000_processed.json
devtools/: README.md
devtools/conda-envs/: doc_env.yaml  docs.yaml  docs_env.yaml  env.yaml  env_modelforge_ase.yaml  env_modelforge_ase_examples.yaml  env_modelforge_openmm.yaml  run_env.yaml  test_env.yaml  test_env_mac.yaml  test_env_mac_modelforge_openmm.yaml  test_env_modelforge_ase.yaml  test_env_modelforge_openmm.yaml
docs/: Makefile  README.md  api.rst  conf.py  curate.rst  datasets.rst  examples.rst  for_developer.rst  getting_started.rst  index.rst  inference.rst  make.bat  models.rst  modules.rst  potentials.rst  profiling.rst  training.rst  tuning.rst
docs/autosummary/: modelforge.canvas.rst  modelforge.potential.models.rst
modelforge/: __init__.py  custom_types.py  jax.py
modelforge-ase/: MANIFEST.in  pyproject.toml
modelforge-ase/modelforge/ase/: __init__.py  calculator.py  (+1 more)
modelforge-curate/: pyproject.toml
modelforge-openmm/: pyproject.toml
modelforge-openmm/modelforge/openmm/: potential.py  utils.py
modelforge-openmm/modelforge/openmm/examples/: generate_modelforge_potential.py  helper_functions.py  openmm_water_topology.py  simple_example_from_smiles.ipynb  simple_openmm.py  simple_openmm_water.py
modelforge-openmm/modelforge/openmm/tests/: conftest.py  test_potential.py
modelforge/curation/: PhAlkEthOH_curation.py  __init__.py  ani1_curation.py  ani1x_curation.py  ani2x_curation.py  ani_curation.py  curation_baseclass.py  model_dataset.py  phalkethoh_curation.py  qm9_curation.py  spice_114_curation.py  spice_1_curation.py  spice_1_openff_curation.py  spice_2_curation.py  spice_2_from_qcarchive_curation.py  spice_curation.py  spice_openff_curation.py  tmqm_curation.py  units.py  utils.py
modelforge/dataset/: __init__.py  ani1x.py  ani1x.yaml  ani2x.py  ani2x.yaml  dataset.py  fe_II.py  model_dataset.py  parameters.py  phalkethoh.py  qcarchive.py  qcdataset.py  qm9.py  spice1.py  spice114.py  spice114openff.py  spice1openff.py  spice2.py  tmqm.py  tmqm_xtb.py  transformation.py  utils.py
modelforge/potential/: __init__.py  __initi__.py  aimnet2.py  ani.py  bayesian_models.py  convert.py  dimenet.py  featurization.py  models.py  neighbors.py  pain.py  painn.py  parameters.py  physnet.py  postprocessing.py  potential.py  processing.py  representation.py  sake.py  schnet.py  spookynet.py  tensornet.py  utils.py
modelforge/tests/: ANI1X_dataset_statistic.toml  QM9_dataset_statistic.toml  SPICE114OpenFF_dataset_v0_nc_1000_HCNOFClS_processed.json  SPICE114_dataset_v0_nc_1000_HCNOFClS_processed.json  SPICE1_OpenFF_dataset_nc_1000_processed.json  SPICE1_OpenFF_dataset_v0_nc_1000_HCNOFClS_processed.json  SPICE2_dataset_v0_nc_1000_HCNOFClS_processed.json  __init__.py  ase.toml  conftest.py  fetch_test_datasets.py  helper_functinos.py  helper_functions.py  list_test_datasets.py  model_datasets.py  precalculated_values.py  pytest.ini  schnetpack_pain_implementation.py  test_aaa_setup.py  test_aimnet2.py  test_ani.py  test_bayesian_model.py  test_curation.py  test_dataset.py  test_dataset_downloads.py  test_dimenet.py  test_featurization.py  test_misc_utils.py  test_modelforge.py  test_models.py  test_neighbors.py  test_nn.py  test_painn.py  test_pairlist.py  test_pairlist_neighborlist.py  test_parameter_models.py  test_physnet.py  test_potentials.py  test_profiling.py  test_pt_lightning.py  (+12 more)
modelforge/train/: __init__.py  losses.py  parameters.py  training.py  tuning.py  utils.py
modelforge/utils/: __init__.py  io.py  misc.py  period_group_dict.json  profiling.py  prop.py  remote.py  units.py  vis.py  zenodo.py
modelforge_openmm/: potential.py
notebooks/: ani_spotchecking.ipynb  benchmark.ipynb  dataclass.ipynb  neighborlists.ipynb  rbfe.ipynb  representation.ipynb  tensornet.ipynb
notebooks/profiling/: _memory_viz.py  memory_profiling.ipynb  plot_GPU_memory_of_each_network.ipynb  profile_GPU_memory_of_a_single_network.ipynb
scripts/: config.toml  dataset_curation.py  manuel_training.py  modify_state_dict.py  perform_training.py  plot_dataset.py  profile_epoch.py  profile_network.py  self_energy_calculation.py  training.py  training_ani2x.py  training_run.sh  training_testing.py  tuning.py
scripts/configs/: README.md
scripts/toml_examples/: ani2x_phalkethoh.toml  ani2x_qm9.toml  painn_qm9.toml  physnet_qm9.toml  sake_qm9.toml  schnet_qm9.toml
(+275 files in other folders)
