[build-system]
# TODO: versioningit is now in v3
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modelforge"
description = "Infrastructure to implement and train NNPs"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Marcus Wieder", email = "marcus.wieder@choderalab.org" }
]
license = { text = "MIT" }
# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
# Declare any run-time dependencies that should be installed with the package.
#dependencies = [
#    "importlib-resources;python_version<'3.10'",
#]

[project.urls]
Source = "https://github.com/choderalab/modelforge"
Documentation = "https://modelforge.readthedocs.io/"
Wiki = "https://github.com/choderalab/modelforge/wiki"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-runner"
]

[tool.setuptools]
# TODO: is this next comment still relevant?
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
modelforge = [
    "py.typed"
]

# https://versioningit.readthedocs.io/en/stable/configuration.html#
[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "modelforge/_version.py"


[tool.coverage.run]
# .coveragerc to control coverage.py and pytest-cov
omit = [
    # Omit the tests
    "*/tests/*",
    # Omit generated versioningit
    "modelforge/_version.py"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203',]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
